kubernetes/yaml_simple_samples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mini-webserver
  labels:
    app: mini-webserver
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
