kubernetes/yaml_simple_samples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-service
spec:
  selector:
    app: mini-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
